# hay-OS

./: Cargo.toml  Makefile  Readme.md  linker.ld
boot/: boot.asm
kernel/: allocator.rs  ata.rs  editor.rs  fs.rs  gdt.rs  interrupts.rs  kernel.rs  macros.rs  memory.rs  pic.rs  setup.rs  shell.rs  task.rs  vga.rs
